--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropdown": "^1.6.4",
+    "react-infinite-scroller": "^1.2.4",
     "react-scripts": "3.3.1"
   },
   "scripts": {
